/*
 * Copyright 2018 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.google.android.gnd.repository";

import "model/form.proto";
import "model/timestamps.proto";

package gnd;

message PlaceType {
  string id = 1;

  // TODO: Plural?
  map<string, string> list_heading = 2;

  map<string, string> item_label = 3;

  string url_subpath = 4;

  string icon_id = 5;

  string icon_color = 6;

  repeated Form forms = 7;

  Timestamps server_timestamps = 8;

  Timestamps client_timestamps = 9;

  bool required = 10;
}