/*
 * Copyright 2018 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.google.android.gnd.repository";

import "google/protobuf/timestamp.proto";
import "model/place.proto";
import "model/record.proto";

package gnd;

message PlaceUpdate {
  enum Operation {
    NO_CHANGE = 0;
    CREATE = 1;
    UPDATE = 2;
    DELETE = 3;
  }

  Place place = 1;

  Operation operation = 2;

  google.protobuf.Timestamp client_timestamp = 3;

  repeated RecordUpdate record_updates = 4;

  message RecordUpdate {
    Record record = 1;

    Operation operation = 2;

    repeated ValueUpdate value_updates = 3;

    message ValueUpdate {
      string element_id = 1;

      Record.Value value = 2;

      Operation operation = 3;
    }
  }
}